Fix overflow in model node edit window, effecting some custom fields

--- a/src/resources/src/scss/navigation.scss
+++ b/src/resources/src/scss/navigation.scss
@@ -109,6 +109,7 @@
 
 .nav-editor-hud .main {
     padding: 20px;
+    overflow: visible;
 }
 
 .nav-editor-hud .hud-footer {
